k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relavoi
  labels:
    name: relavoi
    app.kubernetes.io/part-of: relavoi
