k8s/service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: relavoi-webhook
  namespace: relavoi
  labels:
    app: relavoi-webhook
    component: webhook
spec:
  type: ClusterIP
  selector:
    app: relavoi-webhook
    component: webhook
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
